# fertiscan

./: .cursorignore  .dockerignore  .gitignore  .linelint.yml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
alembic/: env.py
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.sbom  FertiScan_AIA_results.json  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  sbom.json
backend/alembic/: env.py
backend/alembic/versions/: 0057ab8d9c19_initial_migration.py  0ccc38396707_initial_migration.py  200d78bb51cd_initial_migration.py  2e883e7c4af4_initial_migration.py  32e667d7bafb_initial_migration.py  344f2f148e42_initial_migration.py  402ccbb7cc5a_initial_migration.py  50b4b0f465fa_initial_migration_with_product_type.py  50b66adf590b_initial_migration.py  5bce098bbdc9_initial_migration.py  6a96f390624d_initial_migration.py  6b14ae4c4a19_initial_migration.py  8454daf83241_initial_migration.py  8d0c0fd2b0b3_initial_migration.py  97dc273148bb_initial_migration.py  9a74c1607706_initial_migration.py  a21d1d590689_initial_migration.py  a7aa9010a913_initial_migration.py  ae4bb4e0a040_remove_item_table.py  b1548a1beb32_initial_migration.py  bc4ea6099c2c_initial_migration.py  cb1dce6ad43f_initial_migration.py  d1c82ec5c730_initial_migration.py  d6ead9542bd3_initial_migration.py  d7e5e4aa1ebe_initial_migration.py  d9856ad106c5_initial_migration.py  dd5db39b8d6a_initial_migration.py  (+2 more)
backend/app/: backend_pre_start.py  config.py  dependencies.py  emails.py  exceptions.py  initial_data.py  main.py  tests_pre_start.py
backend/legacy/: docker-compose.yml  requirements.txt
backend/scripts/: build-email-templates.sh  format.sh  generate-sbom.sh  prestart.sh  test-cov.sh  test-db-setup.sh  test.sh
backend/tests/: conftest.py  dummy_extraction_data.json  run_eval_test.py  test_backend_pre_start.py  test_cascade_delete.py
(+588 files in other folders)
